updated welcome header on home page

--- a/aboutme.html
+++ b/aboutme.html
@@ -16,11 +16,13 @@
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com"> 
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@450&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@400;500;600&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <link href="http://fonts.cdnfonts.com/css/cocogoose?styles=44178" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Amiko:wght@400;600;700&display=swap" rel="stylesheet">
+
   <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
@@ -110,20 +112,22 @@
           <div class="col-lg-6 mx-auto"> 
             <div class="about-title2">
               <!-- <p style="font-size:200%"> -->
-                HI THERE! 🤝
+                NICE TO MEET YOU! 🤝
               <!-- <p> -->
             </div>
             <div class ="about-paragraph2">
-              I’m a recent Computer Science graduate from UC San Diego
-              with a fascination for thoughtful and innovative design. I 
-              believe in crafting solutions that are long-lasting, resolve human needs, and can help 
+              I'm Irene and I’m a recent Computer Science graduate from UC San Diego. <br> <br> 
+
+
+              with a fascination for thoughtful and simple design. I 
+              believe in crafting solutions that resolve human needs, are long-lasting, and can help 
               people live more fulfilling lives. I'm currently a UX designer in training and working on
-              projects in product design and web development. 
-              Aside from design, I love to run, watch films, and play sports. 
+              projects in product design and user research. 
+              Aside from design, you can find me outside on a run, at the gym, or exploring 
               </div>
 
             <div class ="about-paragraph2">
-              I'm always excited to collaborate! If you'd like to get in touch, feel free to reach me at: 
+              Feel free to reach out to me at: 
               <a class="about-link" href="mailto: irenelue01@gmail.com" target="_blank" title="irenelue01@gmail.com"> irenelue01@gmail.com</a>.
   
               <!-- <a class="cta-btn" href="mailto: irenelue01@gmail.com" 
