--- a/index.html
+++ b/index.html
@@ -23,11 +23,14 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com"> 
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@450&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@400;500;600&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <link href="http://fonts.cdnfonts.com/css/cocogoose?styles=44178" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Amiko:wght@400;600;700&display=swap" rel="stylesheet">
+
+
   <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
         
 
@@ -123,29 +126,24 @@
       <!-- <h1> . </h1> -->
       <body>
         <div class="wrapper-rotate" >
-          <div class="words-rotate">
-            <span class="rotate-text"> HELLO, I'M IRENE! 👋 </span>       <!-- english -->
-            <span class="rotate-text"> NI HAO, WO JIAO IRENE! 👋 </span>   <!-- chinese -->
-            <span class="rotate-text"> HOLA, SOY IRENE! 👋 </span>        <!-- spanish -->
-            <span class="rotate-text"> MARHABAN, 'ANA IRENE! 👋 </span>   <!-- arabic -->
-            <span class="rotate-text"> BONJOUR, JE SUIS IRENE! 👋 </span> <!-- french -->
-            <span class="rotate-text"> NAMASTE, MAIN IRENE! 👋 </span>    <!-- hindi -->
-            <span class="rotate-text"> HELLO, AKO SI IRENE! 👋 </span>    <!-- tagalog -->
-            <span class="rotate-text"> CIAO, SONO IRENE! 👋 </span>       <!-- italian -->
-            <span class="rotate-text"> XIN CHAO, TOI LA IRENE! 👋 </span> <!-- vietnamese -->
-            <span class="rotate-text"> KON'NICHIWA, IRENEDESU! 👋 </span> <!-- japanese -->
-            <span class="rotate-text"> HALLO, ICH BIN IRENE! 👋 </span>   <!-- german -->
-            <span class="rotate-text"> OI, EU SOU IRENE! 👋 </span>       <!-- portugese -->
-            <span class="rotate-text"> PRYVIT, YA IRENE! 👋 </span>       <!-- ukranian -->
-            <span class="rotate-text"> ANNYEONG, JEONEUN IRENE! 👋 </span>   <!-- korean -->
-            <span class="rotate-text"> HAILO, MAIM HAM IRENE! 👋 </span>   <!-- punjabi -->
-            <span class="rotate-text"> SELAM, BEN IRENE! 👋 </span>        <!-- turkish -->
-            <span class="rotate-text"> WITAM, JESTEM IRENE! 👋 </span>   <!-- polish -->
-            <span class="rotate-text"> HALO, SAYA IRENE! 👋 </span>   <!-- indonesian -->
-            <span class="rotate-text"> ALOHA, WAU IRENE! 👋 </span>   <!-- hawaiian -->
-            <!-- spinner stops here-->
-            <span class="rotate-text"> HAI, AKU IRENE! 👋 </span>   <!-- javanese -->
-            <span class="rotate-text"> HAY, NENU IRENE! 👋 </span>   <!-- telugu -->                                                            
+          <div class="words-rotate"> 
+            <!-- rotator skips the 1st one based on attributes in .css file -->
+            <span class="rotate-text"> HALLO! ICH BIN IRENE 👋 </span>   <!-- german -->
+            <span class="rotate-text"> HELLO! I'M IRENE 👋 </span>         <!-- english -->
+            <span class="rotate-text"> 你好！我叫艾琳 👋 </span>           <!-- mandarin -->
+            <span class="rotate-text"> ¡HOLA! MI NOMBRE ES IRENE 👋 </span>       <!-- spanish -->
+            <span class="rotate-text"> BONJOUR! JE M'APPELLE IRENE 👋 </span> <!-- french --> 
+            <span class="rotate-text"> CIAO! IL MIO NOME È IRENE 👋 </span>       <!-- italian -->
+            <span class="rotate-text"> שלום! שמי איירין 👋 </span>          <!-- hebrew -->
+            <span class="rotate-text"> नमस्ते! मेरा नाम आइरीन है 👋 </span>      <!-- hindi -->
+            <span class="rotate-text"> こんにちは！アイリーンです 👋 </span> <!-- japanese -->
+            <span class="rotate-text"> أهلا! اسمي ايرين 👋 </span>   <!-- arabic-->
+            <!-- stops here-->
+            <span class="rotate-text"> 안녕하세요! 내 이름은 아이린 👋 </span>   <!-- korean -->
+            <span class="rotate-text"> OLÁ! MEU NOME É IRENE 👋 </span>   <!-- portugese -->
+            <span class="rotate-text"> MERHABA! BENİM ADIM İRENE 👋 </span> <!-- turkish -->
+            <span class="rotate-text"> WITAM! NAZYWAM SIĘ IRENE 👋 </span>      <!-- polish -->      <!-- arabic -->
+            <!-- spinner stops here-->                                                        
           </div>
         </div>
         <!-- <h1> I'M IRENE! 👋 </h1> -->
@@ -267,9 +265,6 @@
                 </div>
               </div>
             </a>
-            <!-- <div class="img-with-text"> 
-              <p> COVID-Code </p>
-            </div> -->
           </div> <!-- End: Proj 3-->
         </div>
         
