updated about me

--- a/aboutme.html
+++ b/aboutme.html
@@ -116,18 +116,18 @@
               <!-- <p> -->
             </div>
             <div class ="about-paragraph2">
-              I'm Irene and I’m a recent Computer Science graduate from UC San Diego. <br> <br> 
-
-
-              with a fascination for thoughtful and simple design. I 
-              believe in crafting solutions that resolve human needs, are long-lasting, and can help 
-              people live more fulfilling lives. I'm currently a UX designer in training and working on
-              projects in product design and user research. 
-              Aside from design, you can find me outside on a run, at the gym, or exploring 
+              My name is Irene and I’m a recent Computer Science graduate from 
+              UC San Diego. I’m currently a UX designer in training and working 
+              on projects in product design and web development. <br> <br>
+              Because I’m always eager to transform my habits, learn new things, 
+              and challenge my limits, my interests lie within habit formation
+              and self-development. I believe in designing solutions that are 
+              not only long-lasting, but can also help people live the most 
+              fulfilling lives possible.
               </div>
 
             <div class ="about-paragraph2">
-              Feel free to reach out to me at: 
+              I'd love to hear from you! Feel free to reach out to me at: 
               <a class="about-link" href="mailto: irenelue01@gmail.com" target="_blank" title="irenelue01@gmail.com"> irenelue01@gmail.com</a>.
   
               <!-- <a class="cta-btn" href="mailto: irenelue01@gmail.com" 
