--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <div class="wrapper-rotate" >
           <div class="words-rotate"> 
             <!-- rotator skips the 1st one based on attributes in .css file -->
-            <span class="rotate-text"> HALLO! ICH BIN IRENE 👋 </span>   <!-- german -->
+            <span class="rotate-text"> HELLO! I'M IRENE 👋 </span>   <!-- german -->
             <span class="rotate-text"> HELLO! I'M IRENE 👋 </span>         <!-- english -->
             <span class="rotate-text"> 你好！我叫艾琳 👋 </span>           <!-- mandarin -->
             <span class="rotate-text"> ¡HOLA! MI NOMBRE ES IRENE 👋 </span>       <!-- spanish -->
