updated about me

--- a/aboutme.html
+++ b/aboutme.html
@@ -118,7 +118,10 @@
             <div class ="about-paragraph2">
               My name is Irene and I’m a recent Computer Science graduate from 
               UC San Diego. I’m currently a UX designer in training and working 
-              on projects in product design and web development. <br> <br>
+              on projects in product design and web development.
+              </div>
+              
+            <div class = "about-paragraph2">
               Because I’m always eager to transform my habits, learn new things, 
               and challenge my limits, my interests lie within habit formation
               and self-development. I believe in designing solutions that are 
