updated about me

--- a/aboutme.html
+++ b/aboutme.html
@@ -116,7 +116,7 @@
               <!-- <p> -->
             </div>
             <div class ="about-paragraph2">
-              My name is Irene and I’m a recent Computer Science graduate from 
+              I'm Irene and I’m a recent Computer Science graduate from 
               UC San Diego. I’m currently a UX designer in training and working 
               on projects in product design and web development.
               </div>
