updated about me

--- a/index.html
+++ b/index.html
@@ -128,19 +128,19 @@
         <div class="wrapper-rotate" >
           <div class="words-rotate"> 
             <!-- rotator skips the 1st one based on attributes in .css file -->
-            <span class="rotate-text"> HELLO! I'M IRENE 👋 </span>   <!-- german -->
-            <span class="rotate-text"> HELLO! I'M IRENE 👋 </span>         <!-- english -->
-            <span class="rotate-text"> 你好！我叫艾琳 👋 </span>           <!-- mandarin -->
-            <span class="rotate-text"> ¡HOLA! MI NOMBRE ES IRENE 👋 </span>       <!-- spanish -->
-            <span class="rotate-text"> BONJOUR! JE M'APPELLE IRENE 👋 </span> <!-- french --> 
-            <span class="rotate-text"> CIAO! IL MIO NOME È IRENE 👋 </span>       <!-- italian -->
-            <span class="rotate-text"> שלום! שמי איירין 👋 </span>          <!-- hebrew -->
-            <span class="rotate-text"> नमस्ते! मेरा नाम आइरीन है 👋 </span>      <!-- hindi -->
-            <span class="rotate-text"> こんにちは！アイリーンです 👋 </span> <!-- japanese -->
-            <span class="rotate-text"> أهلا! اسمي ايرين 👋 </span>   <!-- arabic-->
+            <span class="rotate-text"> HELLO! I'M IRENE 👋</span>   <!-- german -->
+            <span class="rotate-text"> HELLO! I'M IRENE 👋</span>         <!-- english -->
+            <span class="rotate-text"> 你好！我叫艾琳 👋</span>           <!-- mandarin -->
+            <span class="rotate-text"> ¡HOLA! MI NOMBRE ES IRENE 👋</span>       <!-- spanish -->
+            <span class="rotate-text"> BONJOUR! JE M'APPELLE IRENE 👋</span> <!-- french --> 
+            <span class="rotate-text"> こんにちは！アイリーンです 👋</span> <!-- japanese -->
+            <span class="rotate-text"> HALO! NAMA SAYA IRENE 👋</span>       <!-- indonesian -->           
+            <span class="rotate-text"> أهلا! اسمي ايرين 👋</span>   <!-- arabic-->
+            <span class="rotate-text"> OLÁ! MEU NOME É IRENE 👋</span>   <!-- portugese -->
+            <span class="rotate-text"> नमस्ते! मेरा नाम आइरीन है 👋</span>      <!-- hindi -->
             <!-- stops here-->
             <span class="rotate-text"> 안녕하세요! 내 이름은 아이린 👋 </span>   <!-- korean -->
-            <span class="rotate-text"> OLÁ! MEU NOME É IRENE 👋 </span>   <!-- portugese -->
+            <span class="rotate-text"> שלום! שמי איירין 👋 </span>          <!-- hebrew -->
             <span class="rotate-text"> MERHABA! BENİM ADIM İRENE 👋 </span> <!-- turkish -->
             <span class="rotate-text"> WITAM! NAZYWAM SIĘ IRENE 👋 </span>      <!-- polish -->      <!-- arabic -->
             <!-- spinner stops here-->                                                        
