updated about me

--- a/aboutme.html
+++ b/aboutme.html
@@ -118,15 +118,14 @@
             <div class ="about-paragraph2">
               I'm Irene and I’m a recent Computer Science graduate from 
               UC San Diego. I’m currently a UX designer in training and working 
-              on projects in product design and web development.
+              on projects in UX design and web development.
               </div>
               
             <div class = "about-paragraph2">
               Because I’m always eager to transform my habits, learn new things, 
               and challenge my limits, my interests lie within habit formation
               and self-development. I believe in designing solutions that are 
-              not only long-lasting, but can also help people live the most 
-              fulfilling lives possible.
+              long-lasting and can help people to live fulfilling lives.
               </div>
 
             <div class ="about-paragraph2">
@@ -194,9 +193,9 @@
                       <div class="books-middle"> HOBBIES </div>
                       <div class="books-list">
                         <ol>
-                          <li> RUNNING </li>
-                          <li> WEIGHTLIFTING </li>
-                          <li> READING  </li>
+                          <li> LIFTING </li>
+                          <li> READING </li>
+                          <li> PAINTING  </li>
                         </ol>
                       </div>
                       <div class="image_overlay">
