updated about me

--- a/aboutme.html
+++ b/aboutme.html
@@ -116,7 +116,7 @@
               <!-- <p> -->
             </div>
             <div class ="about-paragraph2">
-              I'm Irene and I’m a recent Computer Science graduate from 
+              My name is Irene and I’m a recent Computer Science graduate from 
               UC San Diego. I’m currently a UX designer in training and working 
               on projects in UX design and web development.
               </div>
@@ -124,8 +124,8 @@
             <div class = "about-paragraph2">
               Because I’m always eager to transform my habits, learn new things, 
               and challenge my limits, my interests lie within habit formation
-              and self-development. I believe in designing solutions that are 
-              long-lasting and can help people to live fulfilling lives.
+              and self-development. I believe in designing thoughtful and simple solutions 
+              that resolve human needs, are long-lasting, and can help people live more fulfilling lives.
               </div>
 
             <div class ="about-paragraph2">
@@ -193,9 +193,9 @@
                       <div class="books-middle"> HOBBIES </div>
                       <div class="books-list">
                         <ol>
-                          <li> LIFTING </li>
-                          <li> READING </li>
-                          <li> PAINTING  </li>
+                          <li> Strength-training </li>
+                          <li> Video editing </li>
+                          <li> Reading </li>
                         </ol>
                       </div>
                       <div class="image_overlay">
@@ -210,9 +210,9 @@
                       <div class="books-middle"> BOOKS </div>
                       <div class="books-list">
                         <ol>
-                          <li> DEEP WORK </li>
-                          <li> ATOMIC HABITS </li>
-                          <li> CAN'T HURT ME </li>
+                          <li> Deep Work </li>
+                          <li> Atomic Habits </li>
+                          <li> Can't Hurt Me </li>
                         </ol>
                       </div>
                       <div class="image_overlay">
@@ -230,9 +230,9 @@
                       <div class="books-middle"> FILMS </div>
                       <div class="books-list">
                         <ol>
-                          <li> HARRY POTTER </li>
-                          <li> PURSUIT OF HAPPYNESS </li>
-                          <li> FROM UP ON POPPY HILL </li>
+                          <li> Harry Potter </li>
+                          <li> Pursuit of Happyness </li>
+                          <li> From Up On Poppy Hill </li>
                         </ol>
                       </div>
                       <div class="image_overlay">
@@ -253,9 +253,9 @@
                       </div> -->
                       <div class="books-list">
                         <ol>
-                          <li> MANDARIN </li> 
-                          <li> ANIMATION </li>                          
-                          <li> HOME IMPROVEMENT </li> 
+                          <li> Mandarin </li> 
+                          <li> Animation </li>                          
+                          <li> Home Improvement </li> 
                         </ol>
                       </div>
                       <div class="image_overlay">
@@ -273,9 +273,9 @@
                       </div> -->
                       <div class="books-list"> 
                         <ol>        
-                          <li> HUMAN RIGHTS </li>                             
-                          <li> ENVIRONMENTALISM </li>  
-                          <li> ANIMAL WELFARE </li>
+                          <li> Human Rights </li>                             
+                          <li> Environmentalism </li>  
+                          <li> Animal Welfare </li>
                         </ol> 
                       </div>
                       <div class="image_overlay">
