--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
               <div class="image">
                 <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
                 <div class="image_overlay">
-                    <div class="image_title">COVIDCODE</div>
+                    <div class="image_title"> POMOLO </div>
                     <p class="image_description">
                         [ COMING SOON ]
                     </p>
