updated about me

--- a/aboutme.html
+++ b/aboutme.html
@@ -122,7 +122,7 @@
               </div>
               
             <div class = "about-paragraph2">
-              Because I’m always eager to transform my habits, learn new things, 
+              Because I’m always eager to transform my habits, learn new skills, 
               and challenge my limits, my interests lie within habit formation
               and self-development. I believe in designing thoughtful and simple solutions 
               that resolve human needs, are long-lasting, and can help people live more fulfilling lives.
