--- a/index.html
+++ b/index.html
@@ -214,11 +214,11 @@
         <div class="row portfolio-container">
           <!-- Proj 1: Covid-Code -->
           <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
-            <a href="under_construction.html" target="blank" title="CovidCode">
+            <a href="under_construction.html" target="blank" title="Pomolo 2/2">
               <div class="image">
-                <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
                 <div class="image_overlay">
-                    <div class="image_title"> POMOLO </div>
+                    <div class="image_title"> POMOLO 2/2 </div>
                     <p class="image_description">
                         [ COMING SOON ]
                     </p>
@@ -239,11 +239,11 @@
 
           <!-- Proj 2 -->
           <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
-            <a href="under_construction.html" target="blank" title="Pomolo">
+            <a href="under_construction.html" target="blank" title="Pomolo 1/2">
               <div class="image">
                 <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
                 <div class="image_overlay">
-                    <div class="image_title"> POMOLO </div>
+                    <div class="image_title"> POMOLO 1/2 </div>
                     <p class="image_description">
                         [ COMING SOON ]
                     </p>
@@ -254,11 +254,11 @@
 
           <!-- Proj 3 -->
           <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
-            <a href="under_construction.html" target="blank" title="Photography">
+            <a href="under_construction.html" target="blank" title="Covid-Code">
               <div class="image">
-                <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
                 <div class="image_overlay">
-                    <div class="image_title"> PHOTOGRAPHY </div>
+                    <div class="image_title"> COVID-CODE </div>
                     <p class="image_description">
                       [ COMING SOON ]
                     </p>
