--- a/under_construction.html
+++ b/under_construction.html
@@ -31,10 +31,12 @@
 			href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700&display=swap"
 			rel="stylesheet"
 		/>
+
 		<link
-			href="http://fonts.cdnfonts.com/css/cocogoose?styles=44178"
+			href="https://fonts.googleapis.com/css2?family=Amiko:wght@400;600;700&display=swap"
 			rel="stylesheet"
 		/>
+
 		<link
 			href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap"
 			rel="stylesheet"
@@ -122,8 +124,8 @@
 					<img src="assets/img/hero-bga.jpg" style="max-width: 200%" />
 				</div>
 				<div class="content">
-					<h1>COMING SOON</h1>
-					<h3>Stay tuned!</h3>
+					<h1>COMING SOON!</h1>
+					<!-- <h3>Stay tuned!</h3> -->
 					<!-- <a href="#about" class="btn">Read More</a> -->
 					<a
 						href="https://www.linkedin.com/in/irenelue/"
