updated portfolio descripts

--- a/index.html
+++ b/index.html
@@ -214,13 +214,13 @@
         <div class="row portfolio-container">
           <!-- Proj 1: Covid-Code -->
           <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
-            <a href="under_construction.html" target="blank" title="Pomolo 2/2">
+            <a href="under_construction.html" target="blank">
               <div class="image">
                 <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
                 <div class="image_overlay">
-                    <div class="image_title"> POMOLO 2/2 </div>
+                    <div class="image_title"> COVID-CODE <br> Redesign </div>
                     <p class="image_description">
-                        [ COMING SOON ]
+                        Reimagined and redesigned COVID-CODE, a health application aiming to prevent the spread of COVID-19.
                     </p>
                 </div>
               </div>
@@ -239,13 +239,13 @@
 
           <!-- Proj 2 -->
           <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
-            <a href="under_construction.html" target="blank" title="Pomolo 1/2">
+            <a href="under_construction.html" target="blank">
               <div class="image">
                 <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
                 <div class="image_overlay">
-                    <div class="image_title"> POMOLO 1/2 </div>
+                    <div class="image_title"> POMOLO </div>
                     <p class="image_description">
-                        [ COMING SOON ]
+                        Designing the log-in and sign-up process for a focus-tracking app to help students.
                     </p>
                 </div>
               </div>
@@ -254,13 +254,13 @@
 
           <!-- Proj 3 -->
           <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
-            <a href="under_construction.html" target="blank" title="Covid-Code">
+            <a href="under_construction.html" target="blank">
               <div class="image">
                 <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
                 <div class="image_overlay">
                     <div class="image_title"> COVID-CODE </div>
                     <p class="image_description">
-                      [ COMING SOON ]
+                      Served as the sole UX and UI designer for a health app capable of determining one's COVID risk level to prevent the spread of the disease.
                     </p>
                 </div>
               </div>
