--- a/under_construction.html
+++ b/under_construction.html
@@ -124,8 +124,8 @@
 					<img src="assets/img/hero-bga.jpg" style="max-width: 200%" />
 				</div>
 				<div class="content">
-					<h1>COMING SOON!</h1>
-					<!-- <h3>Stay tuned!</h3> -->
+					<h1>COMING SOON</h1>
+					<h3>Stay tuned!</h3>
 					<!-- <a href="#about" class="btn">Read More</a> -->
 					<a
 						href="https://www.linkedin.com/in/irenelue/"
