finished basic outline of pomolo

--- a/index.html
+++ b/index.html
@@ -219,9 +219,8 @@
                 <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
                 <div class="image_overlay">
                     <div class="image_title"> COVID-CODE <br> Redesign </div>
-                    <p class="image_description">
-                        Reimagined and redesigned COVID-CODE, a health application aiming to prevent the spread of COVID-19.
-                    </p>
+                    <!-- <p class="image_description">
+                    </p> -->
                 </div>
               </div>
             </a>
@@ -244,9 +243,8 @@
                 <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
                 <div class="image_overlay">
                     <div class="image_title"> POMOLO </div>
-                    <p class="image_description">
-                        Designing the log-in and sign-up process for a focus-tracking app to help students.
-                    </p>
+                    <!-- <p class="image_description">
+                    </p> -->
                 </div>
               </div>
             </a>
@@ -259,9 +257,8 @@
                 <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
                 <div class="image_overlay">
                     <div class="image_title"> COVID-CODE </div>
-                    <p class="image_description">
-                      Served as the sole UX and UI designer for a health app capable of determining one's COVID risk level to prevent the spread of the disease.
-                    </p>
+                    <!-- <p class="image_description">
+                    </p> -->
                 </div>
               </div>
             </a>
