login/signup case study ip

--- a/aboutme.html
+++ b/aboutme.html
@@ -94,16 +94,12 @@
             <!-- added profile picture -->
             <div class="container-fluid">
               <div class="row-fluid">
-                <!-- team-0 profile picture -->
-                <div class="col-lg-12 mx-auto">
-                  <!-- team-00 profile picture -->
-                  <!-- <div class="col-lg-3 col-md-6 d-flex align-items-stretch"> -->
-                  <div class="member-img">             <!-- class="img-fluid rounded-circle" --> 
-                    <img id="prof-pic" src="assets/img/team/team-00.jpg" class="img-fluid" alt=""> 
-                    <p>
-                      <br> <br>
-                    </p>
-                  </div>
+                <!-- team-00 profile picture -->
+                <!-- <div class="col-lg-3 col-md-6 d-flex align-items-stretch"> -->
+                <div class="member-img">             <!-- class="img-fluid rounded-circle" --> 
+                  <br>
+                  <img id="prof-pic" src="assets/img/team/team-00.jpg" class="img-fluid" alt="" style="margin-bottom:50px;"> 
+                
                 </div>
               </div>
             </div>
@@ -112,11 +108,11 @@
           <div class="col-lg-6 mx-auto"> 
             <div class="about-title2">
               <!-- <p style="font-size:200%"> -->
-                NICE TO MEET YOU! 🤝
+               Hi there! 🤝
               <!-- <p> -->
             </div>
             <div class ="about-paragraph2">
-              My name is Irene and I’m a recent Computer Science graduate from 
+              Nice to meet you, I'm Irene! I’m a recent Computer Science graduate from 
               UC San Diego. I’m currently a UX designer in training and working 
               on projects in UX design and web development.
               </div>
@@ -181,7 +177,7 @@
           <!-- ========== Added books/movies/etc ========== -->
           <div class="instagram-container">
             <div class="instagram-title-box">
-              <div class="books-titleNL" style="margin-bottom:10px" title="Get to know me"> GET TO KNOW ME </div>
+              <div class="books-titleNL" style="margin-bottom:10px"> About Irene </div>
             </div>
             <div class="row">
               <section id="portfolio" class="portfolio" style="margin-bottom:-90px">
@@ -292,7 +288,7 @@
           <!-- ========== Added Instagram ========== -->
           <div class="instagram-container">
             <div class="instagram-title-box" style="margin-top:90px">
-              <a class="instagram-title" href="http://instagram.com/irenelue" target="_blank" title="Instagram"> INSTAGRAM </a>
+              <a class="instagram-title" href="http://instagram.com/irenelue" target="_blank" title="Instagram"> Instagram </a>
             </div>
             <div class="row">
               <section id="portfolio" class="portfolio" style="margin-bottom:-90px">
