--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@400;500;600&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Amiko:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Amiko:wght@400;600;650;700&display=swap" rel="stylesheet">
 
 
   <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
@@ -120,25 +120,25 @@
     </nav> <!-- .navbar -->
 
     <div class="hero-container">
-      <!-- <h3>Welcome to <strong>Tempo</strong></h3> -->
-      <br>
+      <br> <br>
       <h1 class="logo"><a href="index.html" title="Home">  IRENE LUE </a> </h1>
       <!-- <h1> . </h1> -->
       <body>
         <div class="wrapper-rotate" >
           <div class="words-rotate"> 
             <!-- rotator skips the 1st one based on attributes in .css file -->
-            <span class="rotate-text"> HELLO! I'M IRENE 👋</span>   <!-- german -->
-            <span class="rotate-text"> HELLO! I'M IRENE 👋</span>         <!-- english -->
-            <span class="rotate-text"> 你好！我叫艾琳 👋</span>           <!-- mandarin -->
-            <span class="rotate-text"> ¡HOLA! MI NOMBRE ES IRENE 👋</span>       <!-- spanish -->
-            <span class="rotate-text"> BONJOUR! JE M'APPELLE IRENE 👋</span> <!-- french --> 
-            <span class="rotate-text"> こんにちは！アイリーンです 👋</span> <!-- japanese -->
-            <span class="rotate-text"> HALO! NAMA SAYA IRENE 👋</span>       <!-- indonesian -->           
-            <span class="rotate-text"> أهلا! اسمي ايرين 👋</span>   <!-- arabic-->
-            <span class="rotate-text"> OLÁ! MEU NOME É IRENE 👋</span>   <!-- portugese -->
-            <span class="rotate-text"> नमस्ते! मेरा नाम आइरीन है 👋</span>      <!-- hindi -->
+            <span class="rotate-text"> Hello! I'm Irene 👋🇺🇸</span>   
+            <span class="rotate-text"> Hello! I'm Irene 👋🇺🇸</span>         <!-- english -->
+            <span class="rotate-text"> Ni hao! Wo jiao Irene 👋🇹🇼</span>           <!-- mandarin 你好！我叫艾琳 -->
+            <span class="rotate-text"> ¡Hola! Mi nombre es Irene 👋🇪🇸</span>       <!-- spanish -->
+            <span class="rotate-text"> Bonjour! Je m'apelle Irene 👋🇫🇷</span> <!-- french --> 
+            <span class="rotate-text"> Hello! Ako po si Irene 👋🇵🇭</span>       <!-- tagalog -->           
+            <span class="rotate-text"> Marhaba! Ana esmy Irene 👋🇦🇪</span>   <!-- arabic-->
+            <span class="rotate-text"> Olá! Meu nome é Irene 👋🇵🇹</span>   <!-- portugese -->
+            <span class="rotate-text"> Namaste! Mera naam hai Irene 👋🇮🇳</span>      <!-- hindi -->
+            <span class="rotate-text"> Hallo! Mein name ist Irene 👋🇩🇪</span> <!-- japanese こんにちは！アイリーンです -->
             <!-- stops here-->
+            <span class="rotate-text"> Konnichiwa! Irene to moushimasu 👋🇯🇵</span> <!-- japanese こんにちは！アイリーンです -->
             <span class="rotate-text"> 안녕하세요! 내 이름은 아이린 👋 </span>   <!-- korean -->
             <span class="rotate-text"> שלום! שמי איירין 👋 </span>          <!-- hebrew -->
             <span class="rotate-text"> MERHABA! BENİM ADIM İRENE 👋 </span> <!-- turkish -->
@@ -146,13 +146,13 @@
             <!-- spinner stops here-->                                                        
           </div>
         </div>
-        <!-- <h1> I'M IRENE! 👋 </h1> -->
       </body>
      <h2> Recent Computer Science graduate from UC San Diego and 
        designer creating digital experiences in Los Angeles, CA. </h2>
       <!-- <i><a href="//24timezones.com/Los-Angeles/time" style="text-decoration: none;" class="clock24" id="tz24-1624350208-c1137-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMSIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0=" title="Los Angeles time zone" target="_blank" rel="nofollow"> Time in Los Angeles</a>
       </i><script type="text/javascript" src="//w.24timezones.com/l.js" async></script> -->
       <!-- <a href="#about" class="btn-get-started scrollto">Get Started</a> -->
+   
     </div>
   </section> <!-- End Hero -->
 
@@ -210,7 +210,7 @@
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio">
       <div class="container">
-
+        <br> <br>
         <div class="row portfolio-container">
           <!-- Proj 1: Covid-Code -->
           <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
@@ -218,9 +218,8 @@
               <div class="image">
                 <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
                 <div class="image_overlay">
-                    <div class="image_title"> COVID-CODE <br> Redesign </div>
-                    <!-- <p class="image_description">
-                    </p> -->
+                    <div class="image_title"> Covid-Code: Redesign </div>
+                    <p class="image_description"> UX/UI Case Study
                 </div>
               </div>
             </a>
@@ -242,9 +241,9 @@
               <div class="image">
                 <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
                 <div class="image_overlay">
-                    <div class="image_title"> POMOLO </div>
-                    <!-- <p class="image_description">
-                    </p> -->
+                    <div class="image_title"> The Login and Signup Process </div>
+                    <p class="image_description"> UX/UI Case Study
+                    </p>
                 </div>
               </div>
             </a>
@@ -256,9 +255,8 @@
               <div class="image">
                 <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
                 <div class="image_overlay">
-                    <div class="image_title"> COVID-CODE </div>
-                    <!-- <p class="image_description">
-                    </p> -->
+                    <div class="image_title"> Covid-Code </div>
+                    <p class="image_description"> UX/UI Case Study
                 </div>
               </div>
             </a>
