--- a/pomolo.html
+++ b/pomolo.html
@@ -219,7 +219,7 @@
                 <p> 
                   From these interviews, I concluded three consistent issues 
                   students faced while logging in and signing up:
-                  <div class="container" style="text-indent:0px;color:#535353;">
+                  <div class="container" style="font-family:Inter; text-indent:0px; color:#535353; font-weight:400;">
                     <ol type = "1" style="line-height:35px; padding-left:3em; margin:0px 0 90px 0px;"> 
                       <li> Students want a quick login and signup process that 
                         involves a limited number of steps. </li> 
@@ -267,7 +267,7 @@
                 <p> After integrating the branding and visuals, I reinterviewed 
                   past users to test the usability of my designs. I divided my 
                   interviews into three parts: 
-                  <div class="container" style="text-indent:0px; color:#535353;">
+                  <div class="container" style="font-family:Inter; text-indent:0px; color:#535353; font-weight:400;">
                     <ol type = "1" style="line-height:35px; padding-left:3em; margin:0px 0 40px 0px;"> 
                       <li> Pre-testing for delving into mental models. </li> 
                       <li> In-testing in which I asked users to complete four 
@@ -282,7 +282,7 @@
                 </p> 
                 <p> I then outlined a list of possible edge cases they may 
                   encounter and designed a responsive page for each: 
-                  <div class="container" style="text-indent:0px; color:#535353;">
+                  <div class="container" style="font-family:Inter; text-indent:0px; color:#535353; font-weight:400;">
                     <ol type = "1" style="line-height:35px; padding-left:3em; margin:0px 0 40px 0px;"> 
                       <li> Creating an account
                         <ol type = "a">
@@ -329,7 +329,7 @@
                   and implemented these changes accordingly. </p>
 
                 <h3> Result </h3>
-                <p style="margin-bottom:70px;"> A demonstration of the login and registration process for a focus-tracking app. </p>
+                <p style="margin-bottom:70px;"> A demonstration of the login and registration process for Pomolo. </p>
                 
                 <div class="container"> 
                   <!-- for side by side / img parallel to paragraph -->
