--- a/aboutme.html
+++ b/aboutme.html
@@ -190,8 +190,8 @@
                       <div class="books-list">
                         <ol>
                           <li> Strength-training </li>
-                          <li> Video editing </li>
                           <li> Reading </li>
+                          <li> Sketching </li>
                         </ol>
                       </div>
                       <div class="image_overlay">
@@ -243,15 +243,15 @@
                   <div class="column" class="img-fluid">
                     <div class="image">
                       <img src="assets/img/things/anime.jpg" class="img-fluid" alt="">
-                      <div class="books-middle"> LEARNING </div>
+                      <div class="books-middle"> PRACTICING </div>
                       <!-- <div class="image_overlay">
                           <div class="image_title2">BOOKS</div>
                       </div> -->
                       <div class="books-list">
                         <ol>
+                          <li> Animation </li>    
+                          <li> Piano </li>                       
                           <li> Mandarin </li> 
-                          <li> Animation </li>                          
-                          <li> Home Improvement </li> 
                         </ol>
                       </div>
                       <div class="image_overlay">
