--- a/index.html
+++ b/index.html
@@ -122,34 +122,16 @@
     <div class="hero-container">
       <br> <br>
       <h1 class="logo"><a href="index.html" title="Home">  IRENE LUE </a> </h1>
-      <!-- <h1> . </h1> -->
-      <body>
-        <div class="wrapper-rotate" >
-          <div class="words-rotate"> 
-            <!-- rotator skips the 1st one based on attributes in .css file -->
-            <span class="rotate-text"> Hello! I'm Irene 👋🇺🇸</span>   
-            <span class="rotate-text"> Hello! I'm Irene 👋🇺🇸</span>         <!-- english -->
-            <span class="rotate-text"> Ni hao! Wo jiao Irene 👋🇹🇼</span>           <!-- mandarin 你好！我叫艾琳 -->
-            <span class="rotate-text"> ¡Hola! Mi nombre es Irene 👋🇪🇸</span>       <!-- spanish -->
-            <span class="rotate-text"> Bonjour! Je m'apelle Irene 👋🇫🇷</span> <!-- french --> 
-            <span class="rotate-text"> Hello! Ako po si Irene 👋🇵🇭</span>       <!-- tagalog -->           
-            <span class="rotate-text"> Marhaba! Ana esmy Irene 👋🇦🇪</span>   <!-- arabic-->
-            <span class="rotate-text"> Olá! Meu nome é Irene 👋🇵🇹</span>   <!-- portugese -->
-            <span class="rotate-text"> Namaste! Mera naam hai Irene 👋🇮🇳</span>      <!-- hindi -->
-            <span class="rotate-text"> Hallo! Mein name ist Irene 👋🇩🇪</span> <!-- japanese こんにちは！アイリーンです -->
-            <!-- stops here-->
-            <span class="rotate-text"> Konnichiwa! Irene to moushimasu 👋🇯🇵</span> <!-- japanese こんにちは！アイリーンです -->
-            <span class="rotate-text"> 안녕하세요! 내 이름은 아이린 👋 </span>   <!-- korean -->
-            <span class="rotate-text"> שלום! שמי איירין 👋 </span>          <!-- hebrew -->
-            <span class="rotate-text"> MERHABA! BENİM ADIM İRENE 👋 </span> <!-- turkish -->
-            <span class="rotate-text"> WITAM! NAZYWAM SIĘ IRENE 👋 </span>      <!-- polish -->      <!-- arabic -->
-            <!-- spinner stops here-->                                                        
-          </div>
-        </div>
-      </body>
-     <h2> Recent Computer Science graduate from UC San Diego and 
-       designer creating digital experiences in Los Angeles, CA. </h2>
-      <!-- <i><a href="//24timezones.com/Los-Angeles/time" style="text-decoration: none;" class="clock24" id="tz24-1624350208-c1137-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMSIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0=" title="Los Angeles time zone" target="_blank" rel="nofollow"> Time in Los Angeles</a>
+      <h1> Hello! I'm Irene 👋 </h1>
+
+      <!-- HEADER ROTATOR REMOVED STARTING HERE -->
+      <h2> Recent Computer Science graduate from UC San Diego and 
+      designer creating digital experiences in Los Angeles, CA. </h2>
+        
+
+      
+      <!-- <i><a href="//24timezones.com/Los-Angeles/time" style="text-decoration: none;" class="clock24" 
+        id="tz24-1624350208-c1137-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMSIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0=" title="Los Angeles time zone" target="_blank" rel="nofollow"> Time in Los Angeles</a>
       </i><script type="text/javascript" src="//w.24timezones.com/l.js" async></script> -->
       <!-- <a href="#about" class="btn-get-started scrollto">Get Started</a> -->
    
@@ -159,53 +141,6 @@
   
 
   <main id="main">
-    <!-- ======= Services Section ======= -->
-    <!-- <section id="services" class="services">
-      <div class="container">
-
-        <div class="section-title">
-          <h2>Services</h2>
-          <h3>We do offer awesome <span>Services</span></h3>
-          <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
-        </div>
-
-        <div class="row">
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-file"></i></div>
-              <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-world"></i></div>
-              <h4 class="title"><a href="">Nemo Enim</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section> --><!-- End Services Section -->
 
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio">
